--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ bazel-*
 
 # A user is free to specify custom builds or options here without them being checked in.
 bazel/user/buildrc
+
+skia_opt_research/out*
