--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3366,3 +3366,11 @@ if (is_ios && skia_enable_skottie && !skia_enable_flutter_defines) {
     deps = [ "tools/skottie_ios_app" ]
   }
 }
+
+test_app("skp_opt_membench") {
+  sources = ["skia_opt_research/skp_opt_membench.cpp"]
+  deps = [
+    ":flags",
+    ":skia",
+  ]
+}
