--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,4 @@ bazel-*
 # A user is free to specify custom builds or options here without them being checked in.
 bazel/user/buildrc
 
-skia_opt_research/out*
+skia_opt_research/out/*
