--- a/skia_opt_research/SkiOpt/Cargo.toml
+++ b/skia_opt_research/SkiOpt/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 skia-safe = "0"
 serde_json = "*"
+strum = "0.24"
+strum_macros = "0.24"
 serde = {version="1.0", features=["derive"]}
 egg = "0.9.1"
