--- a/gn/skia/BUILD.gn
+++ b/gn/skia/BUILD.gn
@@ -233,7 +233,7 @@ config("default") {
   }
 
   if (is_linux) {
-    libs += [ "pthread" ]
+    libs += [ "pthread" , "protobuf"]
   }
 
   if (is_mac) {
