--- a/skia_opt_research/SkiPass/Cargo.toml
+++ b/skia_opt_research/SkiPass/Cargo.toml
@@ -12,3 +12,8 @@ strum = "0.24"
 strum_macros = "0.24"
 serde = {version="1.0", features=["derive"]}
 egg = "0.9.1"
+bytes = "0.4"
+prost = "0.5"
+
+[build-dependencies]
+prost-build = { version = "0.5" }
