--- a/.gitignore
+++ b/.gitignore
@@ -63,4 +63,5 @@ skia_opt_research/out/*
 skia_opt_research/skps/*
 skia_opt_research/*.pb.cc
 skia_opt_research/*.pb.h
+skia_opt_research/*_pb2.py
 
