--- a/skia_opt_research/SkiPass/Cargo.toml
+++ b/skia_opt_research/SkiPass/Cargo.toml
@@ -14,6 +14,9 @@ serde = {version="1.0", features=["derive"]}
 egg = "0.9.1"
 bytes = "0.4"
 prost = "0.5"
+ordered-float = "1"
+log = "0.4"
+once_cell = "1"
 
 [build-dependencies]
 prost-build = { version = "0.5" }
