--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3370,6 +3370,7 @@ if (is_ios && skia_enable_skottie && !skia_enable_flutter_defines) {
 test_app("skia_opt_membench") {
   sources = [
     "skia_opt_research/skia_opt_membench.cpp",
+    "skia_opt_research/skp_analyzer.h",
     # Run 'make gen-proto' to generate these files.
     "skia_opt_research/ski_pass.pb.cc",
     "skia_opt_research/ski_pass.pb.h",
