--- a/gn/skia/BUILD.gn
+++ b/gn/skia/BUILD.gn
@@ -233,6 +233,9 @@ config("default") {
   }
 
   if (is_linux) {
+    # SKI_PASS_LIB_PATH is set in the Makefile. 
+    # Points to directory containing SkiPassIR static library.
+    lib_dirs = [getenv("SKI_PASS_LIB_DIR")]
     libs += [ "pthread" , "protobuf"]
   }
 
