--- a/skia_opt_research/SkiPass/Cargo.toml
+++ b/skia_opt_research/SkiPass/Cargo.toml
@@ -16,6 +16,12 @@ bytes = "0.4"
 prost = "0.5"
 ordered-float = { version="3.0", features=["serde"]}
 parse-display = "0.6.0"
+ffi_utils="*"
+libc="*"
+
+[lib]
+crate-type=["staticlib"]
+
 
 [build-dependencies]
 prost-build = { version = "0.5" }
